# py-health-diet

./: README.md  health-diet.py  pyproject.toml
src/: index.html
